# anatta

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.cargo/: config.toml
.github/workflows/: ci.yml
.sqlx/: query-0299bd2f4dbfb12ef4e9cc809fd1383a686260a2fa2292ca3e69c789857ece17.json  query-0348ca1f0ea68e0c994ab30e177b0d9269f2437dd2fad0d2336944ce64146d3d.json  query-0593665bda81b2d9bb6dc25a536303feacc2d5c018264e665e4e8eac8181523d.json  query-07b28bc6eb42af07548d7be5e49a812ada6221903fb517a9b88571d6e14ce32d.json  query-0fe930a9738edc3b149eab1af9dd459aaff940c86b1029ae96671927664feb1a.json  query-35355e16e690f2f721aa88b6e02a3a0e00d44ddcfeabff780c090a8af85f7eca.json  (+14 more)
apps/anatta-cli/: Cargo.toml
apps/anatta-cli/src/: auth.rs  config.rs  launch.rs  main.rs  profile.rs  send.rs
apps/anatta-cli/src/chat/: input.rs  lock.rs  mod.rs  permission_hotkey.rs  runner.rs  slash.rs
apps/anatta-cli/src/chat/render/: line.rs  markdown.rs  mod.rs
apps/anatta-cli/src/conversation/: mod.rs
apps/anatta-daemon/: Cargo.toml
apps/anatta-daemon/src/: main.rs
apps/anatta-server/: Cargo.toml
apps/anatta-server/src/: main.rs
crates/anatta-core/: Cargo.toml
crates/anatta-core/src/: agent_event.rs  lib.rs  permission.rs  projector.rs
crates/anatta-daemon-core/: Cargo.toml
crates/anatta-daemon-core/src/: lib.rs
crates/anatta-runtime/: Cargo.toml
crates/anatta-runtime/src/: lib.rs  session_lock.rs
crates/anatta-runtime/src/claude/: distribution.rs  history.rs  mod.rs  projector.rs  sanitize.rs  stream.rs
crates/anatta-runtime/src/codex/: distribution.rs  history.rs  mod.rs  projector.rs  stream.rs
crates/anatta-runtime/src/codex/app_server/: mod.rs  projector.rs  wire.rs
crates/anatta-runtime/src/conversation/: absorb.rs  mod.rs  paths.rs  render.rs  render_v2.rs  sidecar.rs
crates/anatta-runtime/src/distribution/: error.rs  fetch.rs  mod.rs  platform.rs  tests.rs
crates/anatta-runtime/src/profile/: claude.rs  codex.rs  family.rs  mod.rs  policy.rs  providers.rs
crates/anatta-runtime/src/spawn/: claude.rs  claude_interactive.rs  codex.rs  ids.rs  mod.rs  pipeline.rs  session.rs  stderr_buf.rs
crates/anatta-runtime/src/spawn/codex/: handshake.rs  launch.rs  mod.rs  persistent.rs  pump.rs
crates/anatta-runtime/src/transcode/: cache.rs  id_mint.rs  mod.rs
crates/anatta-runtime/src/transcode/claude_to_codex/: mod.rs  tests.rs
crates/anatta-runtime/src/transcode/codex_to_claude/: mod.rs  tests.rs
crates/anatta-runtime/tests/: claude_fixtures.rs  claude_install.rs  claude_interactive_unit.rs  claude_stream_fixtures.rs  codex_fixtures.rs  codex_install.rs  codex_stream_fixtures.rs  conversation_lifecycle.rs  projection_fixtures.rs  sanitize_fixtures.rs  spawn_e2e.rs  spawn_mock.rs
crates/anatta-server-core/: Cargo.toml
crates/anatta-server-core/src/: lib.rs
crates/anatta-store/: Cargo.toml
crates/anatta-store/.sqlx/: query-0114c68e6652858acf40a4c48f301efee420b889cae9131b2f10e97aee7090fc.json  query-1c5cc59c95b7492ada686d797b9c0d22b239386ebd2880b0ebbf1895e5b7783d.json  query-2007de8680e58d750010c9f38494ef1d7576d90b7d92b0833fedef92fcbf9daf.json  query-257ed30fb7ed0857d623655cb8185cfdce33c9587e71dcbec5356282ad566b64.json  query-2e93e91162718ce3fc2a4f68b7e5933485855f9aaa462988ffbf445f18ef0904.json  query-3f33285bb5636fddf4c5779efa6d4d2484c1f6545c1e71f0dfcc6bd9206f7652.json  query-430ee10c780d1ed66dd4ebea4a162790225a67d9da30d7b4b18e60aef90c2daf.json  query-46d75ba35b167e032b9ce9dbddf5f8a428e0e56fd88f5e1bdf5d4764c22600e4.json  query-49a5af5bd1a4339f879f8274889d42138e2d0b04180f92d85d516fdd3650db58.json  query-5bdd7ea744f1206c6bafcd1998140c5dcffeb38b6d893b36d7612d643d66a0ba.json  query-6160b31240f680471147390e975080ecb0ab90f707378028a25988cb5a262ec4.json  query-63b711f97b414dc85c64f8ce3f8809ac6c3bbfc118b4a5ddb9ae9c931c0bff7f.json  query-67b8919a8ac961679d339b26a7df93915562e8e4644378a505bfcfe11575695e.json  query-6a9f51986febf8a1097d5c5865dda04c1263e0c6be966fc27e9b40c7963d8b07.json  query-6fb3458b70e0654371ef95f54fdbff7db469b6de872086ee9727d5a072d078ca.json  query-76770a8faa3778976fd26c4bf83e220b36009e5e72fad1a50fdafe3b01d0afa9.json  query-77dd93b0f782a822631f3cb100ae9c04d38cd3767836fcbf2f224394de03ef2b.json  query-7d40cfa746ee380da0766f219bb7a4f6e593c5edf4c7e0fc0f35f94bcc5a6e53.json  query-8180b0ae222228507c8b6958cb9756cf56e83ce39f11a8f4f0af97da9b55c47f.json  query-8f855220276338859f42853af67fc2d9ba869a40335d06cc819c45c1c791db39.json  query-b979581a390bbb5c5fd0169a83e8e283c0c4f41b58ece613e939890903fd18bc.json  query-bcab7bdaf3520264a57fe239924dbfe5fd6df42787d80692b19d758adb3b1ecf.json  query-bf99cb898eacb2593c6e2a9f02d1909e951ba219539b4ec8056f3552c400321c.json  query-c5ca4969283059d87add3a8069685c40f52b0ee0a236f8392b6b3a0d088494ef.json  query-cc131b8b1483babc181bf707cbd243f0d4072b7533d23fa76c2b53c2d41b5c71.json  query-cd1749719c264178bc7a52a5481108385443efadbda5cf15a897eda3693bd278.json  query-d2e32c3e16fd6d553a97b2d43964b91d4c5b28d10a2ae86158ab387bdb9b570d.json  query-d32e0c60c86e71015bea91bf26f5bb599c6b4d8ba76524e521ad7d81249453d3.json  query-daafad7f86f8b10f0682baea405965212e3f693d6e805fff4a66bc237aeb0e77.json  query-db6612609d7e1a149322050f859973d0934dd3d66370c8931f1c8b21d3e3275e.json  query-dd002f49d495bce1075ea62d2866d81a43bdb06b05f00eab40c2b93640eccae9.json  query-dec832b40233692474be5b69f961f74925aba3286f4bf9500dcc8931f6f24669.json  query-e4c98be40803c407ec0e5a00c1c3fc832578d35fb0bbadff84771a824a298208.json  query-e970f9d5b47fce2f36c8ba00403243d539f54f44995079a1774ea47859faa998.json  query-efefc143d51de738595fddb426a7ce20ec894cdf696ec8f7db1eda3dd19f05f6.json  query-f273e6ca626e188ee80a7c2c3466d6125ea36f00dca8f5d991d357a30ceae0b6.json  query-f95a35fa83aa7a236173460ccb5783aed4bb6e4cc42b46491eade09a2361607e.json
crates/anatta-store/migrations/: 0001_init_profile.sql  0002_profile_provider.sql  0003_conversation.sql  0004_lock_started_at.sql  0005_drop_lock_columns.sql  0006_conversation_segments.sql  0007_cross_engine_additive.sql
crates/anatta-store/src/: codex_state.rs  conversation.rs  lib.rs  migrate.rs  profile.rs  segment.rs
scripts/: sqlx-prepare.sh
(+10 files in other folders)
