[package]
name = "anatta-cli"
description = "anatta command-line client. v1: profile management. Phase 2: talks to anatta-server over HTTP+SSE."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "anatta"
path = "src/main.rs"

[dependencies]
anatta-core    = { path = "../../crates/anatta-core" }
anatta-runtime = { path = "../../crates/anatta-runtime", features = ["spawn"] }
anatta-store   = { path = "../../crates/anatta-store" }

clap        = { version = "4", features = ["derive", "env"] }
dialoguer   = { version = "0.11", default-features = false, features = ["password"] }
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-std", "signal", "sync"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }

# chat-specific
crossterm      = "0.29"
termimad       = "0.31"
rustyline      = { version = "15", default-features = false, features = ["with-file-history"] }
unicode-width  = "0.2"

[dev-dependencies]
tempfile    = "3"
