[package]
name = "anatta-core"
description = "Pure domain logic: Intent FSM, dependency graph algorithms, card lifecycle, unified AgentEvent. No IO, no async."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
