[package]
name = "anatta-runtime"
description = "Agent CLI subprocess runtime: spawn, stream IO, supervise lifecycle. Not bound to claude specifically."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
default = []
# Pulls in HTTP, sha256, tar, async runtime — only needed by binaries that
# install/manage runtime versions (anatta-cli). Daemon does NOT enable this.
installer = [
    "dep:reqwest",
    "dep:sha2",
    "dep:hex",
    "dep:flate2",
    "dep:tar",
    "dep:tokio",
    "dep:futures-util",
    "dep:async-trait",
]
# Pulls in tokio process / sync — needed by daemon to spawn agent backends.
# Pure-parser consumers (e.g., a tool that just reads disk jsonl) skip it.
spawn = [
    "dep:tokio",
    "dep:async-trait",
]

[dependencies]
anatta-core = { path = "../anatta-core" }
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
nanoid     = "0.5"
ulid       = { workspace = true }
fs4        = { version = "0.13", default-features = false, features = ["sync"] }

# installer-feature-only deps
async-trait  = { version = "0.1", optional = true }
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"], optional = true }
sha2         = { version = "0.10", optional = true }
hex          = { version = "0.4",  optional = true }
flate2       = { version = "1",    optional = true }
tar          = { version = "0.4",  optional = true }
tokio        = { version = "1",    default-features = false, features = ["fs", "rt", "macros", "io-util", "sync", "process", "time"], optional = true }
futures-util = { version = "0.3",  default-features = false, features = ["std"], optional = true }

[dev-dependencies]
anatta-core = { path = "../anatta-core" }
serde_json = { workspace = true }
chrono     = { workspace = true }
tokio      = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile   = "3"
