[package]
name = "anatta-server-core"
description = "Server-side library: tonic service implementations, persistence, auth interceptors. Consumed by apps/anatta-server."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
