[package]
name = "anatta-store"
description = "Persistence layer: SQLite-backed storage for profiles, intents, sessions, cards. Shared by anatta-cli and anatta-daemon-core."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }

[dev-dependencies]
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
